Fix parallax overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1043,6 +1043,7 @@ section > div > .container:nth-child(3){
     }
 
     .para-list{
+        font-size:2.8rem; 
         margin-top: 5%;
         border-radius: 20px;
         min-height: 80vh;
